--- a/src/app/pages/bandeja/bandeja.page.html
+++ b/src/app/pages/bandeja/bandeja.page.html
@@ -1,9 +1,11 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>bandeja</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>bandeja</ion-title>
+    </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
+<ion-content padding>
+    <ion-list>
+        <ion-card></ion-card>
+    </ion-list>
 </ion-content>
