--- a/src/app/pages/su/su.page.html
+++ b/src/app/pages/su/su.page.html
@@ -24,7 +24,7 @@
                 <ion-icon name="mail"></ion-icon>
                 <ion-label>Like</ion-label>
             </ion-tab-button>
-            <ion-tab-button (click)="codigo()">
+            <ion-tab-button routerLink="/su">
                 <ion-icon name="person"></ion-icon>
                 <ion-label>Entrar</ion-label>
             </ion-tab-button>
