--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -4,7 +4,7 @@
     background-size: cover;
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
 }
 
 .rowStyle {
@@ -24,4 +24,6 @@ ion-label {
     opacity: 2;
 }
 
-ion-grid {}
+ion-item {
+    opacity: 0.7;
+}
