--- a/src/app/pages/su/su.page.html
+++ b/src/app/pages/su/su.page.html
@@ -6,7 +6,7 @@
             </ion-button>
         </ion-buttons>
         <ion-title text-center>
-            Ionic Blank
+            IT reclamos
         </ion-title>
         <ion-buttons slot="end">
             <ion-button>
@@ -17,16 +17,16 @@
     <ion-toolbar mode="ios">
         <ion-tab-bar>
             <ion-tab-button>
-                <ion-icon name="send"></ion-icon>
+                <ion-icon name="mail"></ion-icon>
                 <ion-label>Buzon</ion-label>
             </ion-tab-button>
-            <ion-tab-button routerLink="/bandeja">
-                <ion-icon name="mail"></ion-icon>
+            <ion-tab-button (click)="change=true">
+                <ion-icon name="thumbs-up"></ion-icon>
                 <ion-label>Like</ion-label>
             </ion-tab-button>
-            <ion-tab-button routerLink="/su">
-                <ion-icon name="person"></ion-icon>
-                <ion-label>Entrar</ion-label>
+            <ion-tab-button (click)="change=false">
+                <ion-icon name="thumbs-down"></ion-icon>
+                <ion-label>Dislike</ion-label>
             </ion-tab-button>
         </ion-tab-bar>
     </ion-toolbar>
@@ -37,26 +37,18 @@
         <div style="width: 100%; height: 100%; background: #000000; opacity: 0.2;"></div>
     </div>
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    <ion-card style="opacity: 0.7" color="light" *ngFor="let mensaje of mensajes">
+        <ion-card-header class="ion-text-center">
+            <ion-card-title>{{mensaje.name}}</ion-card-title>
+        </ion-card-header>
+        <ion-card-content class="ion-text-center">
+            <p>
+                {{mensaje.descripcion}}
+            </p>
+        </ion-card-content>
+    </ion-card>
 
-    <div style="background: #ffffff; margin:50px 40px 50px 40px; padding:0 0 50px 0; height: 500px;">
-        <ion-item lines="none">
-            <ion-label position="floating">Nombre</ion-label>
-            <ion-input [(ngModel)]="sender.name" type="text"></ion-input>
-        </ion-item>
-        <ion-item lines="none">
-            <ion-label position="floating">Apellido</ion-label>
-            <ion-input [(ngModel)]="sender.lastName" type="text"></ion-input>
 
-        </ion-item>
-        <ion-item lines="none">
-            <ion-textarea [(ngModel)]="sender.descripcion" placeholder="Descripción"></ion-textarea>
-        </ion-item>
 
-        <ion-button (click)="sent()" expand="block" shape="round" color="success">Enviar</ion-button>
-    </div>
 
 </ion-content>
