--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -17,15 +17,11 @@
     <ion-toolbar mode="ios">
         <ion-tab-bar>
             <ion-tab-button>
-                <ion-icon name="send"></ion-icon>
+                <ion-icon mode="md" name="send"></ion-icon>
                 <ion-label>Buzon</ion-label>
             </ion-tab-button>
-            <ion-tab-button routerLink="/bandeja">
-                <ion-icon name="mail"></ion-icon>
-                <ion-label>Like</ion-label>
-            </ion-tab-button>
             <ion-tab-button (click)="codigo()">
-                <ion-icon name="person"></ion-icon>
+                <ion-icon mode="md" name="contact"></ion-icon>
                 <ion-label>Entrar</ion-label>
             </ion-tab-button>
         </ion-tab-bar>
