--- a/src/app/pages/su/su.page.html
+++ b/src/app/pages/su/su.page.html
@@ -1,8 +1,8 @@
 <ion-header>
     <ion-toolbar>
         <ion-buttons slot="start">
-            <ion-button>
-                <ion-menu-button></ion-menu-button>
+            <ion-button routerLink="/home">
+                <ion-icon mode="md" name="arrow-round-back"></ion-icon>
             </ion-button>
         </ion-buttons>
         <ion-title text-center>
@@ -10,21 +10,21 @@
         </ion-title>
         <ion-buttons slot="end">
             <ion-button>
-                <ion-icon name="add"></ion-icon>
+                <ion-icon mode="ios" name="add"></ion-icon>
             </ion-button>
         </ion-buttons>
     </ion-toolbar>
     <ion-toolbar mode="ios">
         <ion-tab-bar>
-            <ion-tab-button>
+            <ion-tab-button [ngClass]="{'borde': change == 0}" (click)="change=0">
                 <ion-icon name="mail"></ion-icon>
                 <ion-label>Buzon</ion-label>
             </ion-tab-button>
-            <ion-tab-button (click)="change=true">
+            <ion-tab-button [ngClass]="{'borde': change == 1}" (click)="change=1">
                 <ion-icon name="thumbs-up"></ion-icon>
                 <ion-label>Like</ion-label>
             </ion-tab-button>
-            <ion-tab-button (click)="change=false">
+            <ion-tab-button [ngClass]="{'borde': change == 2}" (click)="change=2">
                 <ion-icon name="thumbs-down"></ion-icon>
                 <ion-label>Dislike</ion-label>
             </ion-tab-button>
@@ -37,7 +37,7 @@
         <div style="width: 100%; height: 100%; background: #000000; opacity: 0.2;"></div>
     </div>
     <br>
-    <ion-card style="opacity: 0.7" color="light" *ngFor="let mensaje of mensajes">
+    <ion-card style="opacity: 0.7" color="light" *ngFor="let mensaje of mensajes | filtros:change">
         <ion-card-header class="ion-text-center">
             <ion-card-title>{{mensaje.name}}</ion-card-title>
         </ion-card-header>
